[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name        = "agentdyne"
version     = "1.0.0"
description = "Official Python SDK for AgentDyne — The Global Microagent Marketplace"
readme      = "README.md"
license     = { text = "MIT" }
authors     = [{ name = "AgentDyne, Inc.", email = "sdk@agentdyne.com" }]
keywords    = ["agentdyne", "ai", "agents", "llm", "sdk", "anthropic", "mcp"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies    = []   # Zero required deps for sync client

[project.optional-dependencies]
async = ["httpx>=0.27.0"]
dev   = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27.0", "respx>=0.21"]

[project.urls]
Homepage      = "https://agentdyne.com"
Documentation = "https://agentdyne.com/docs"
Repository    = "https://github.com/agentdyne/sdk-python"
"Bug Tracker" = "https://github.com/agentdyne/sdk-python/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentdyne*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
